--- a/.github/workflows/Cursor-coding-test-1.yml
+++ b/.github/workflows/Cursor-coding-test-1.yml
@@ -68,8 +68,55 @@ jobs:
         name: OpenWrt_firmware
         path: ${{ steps.organize.outputs.FIRMWARE }}
 
-    - name: 清理
+    - name: 清理 Docker 资源
       if: always()
       run: |
         docker rm -f openwrt-container
         docker rmi openwrt-builder
+
+    - name: 删除旧的 Workflows
+      if: always()
+      uses: Mattraks/delete-workflow-runs@v2
+      with:
+        token: ${{ github.token }}
+        repository: ${{ github.repository }}
+        retain_days: 0
+        keep_minimum_runs: 3
+
+    - name: 删除旧的 Releases
+      if: always()
+      uses: dev-drprasad/delete-older-releases@v0.2.1
+      with:
+        keep_latest: 3
+        delete_tags: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: 删除未关联的 tags
+      if: always()
+      uses: actions/github-script@v6
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const { data: tags } = await github.rest.repos.listTags({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+          });
+          for (const tag of tags) {
+            try {
+              await github.rest.repos.getReleaseByTag({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                tag: tag.name,
+              });
+            } catch (e) {
+              if (e.status === 404) {
+                await github.rest.git.deleteRef({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  ref: `tags/${tag.name}`,
+                });
+                console.log(`Deleted tag: ${tag.name}`);
+              }
+            }
+          }
