--- a/.github/workflows/Cursor-coding-test-1.yml
+++ b/.github/workflows/Cursor-coding-test-1.yml
@@ -18,8 +18,8 @@ env:
   REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: v23.05.5
   CONFIG_FILE: ${{ github.event.inputs.config }}
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
+  DIY_P1_SH: diy-plug-for-openwrt.sh
+  DIY_P2_SH: diy-config.sh
   UPLOAD_FIRMWARE: true
   TZ: Asia/Shanghai
 
